bosy,html {overflow-x:hidden change to overflow:hidden} this solve the scrolling problem  also change the position of the background video to fixed

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body, html {
     width: 100%;
     height: 100%;
     font-family: Arial, sans-serif;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 /* style*/
 .dotgothic16-regular {
@@ -41,13 +41,13 @@ body, html {
 
 .video-container {
     position: relative;
-    width: 100%;
-    height: 100vh;
+    min-width: 100%;
+    min-height: 100vh;
     overflow: hidden;
 }
 
 .background-video {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -336,7 +336,10 @@ body, html {
     }
 
     .hero-text h1 {
-        font-size: 1rem;
+        font-size: 0.8rem;
+        white-space: nowrap;
+        text-overflow: ellipsis; 
+        
     }
 
     .hero-text p {
@@ -347,6 +350,7 @@ body, html {
         margin-top: 16px;
     }
 
+
     .arrow{
         font-weight: lighter;
         font-size: 1rem;
@@ -354,5 +358,8 @@ body, html {
         margin-left: 12px;
         
     
+    }
+    .sidebar a{
+        font-size: 0.6rem;
     }
 }
